# pyapnea

./: CHANGELOG.md  README.md  ROADMAP.md  mkdocs.yml  pyproject.toml  requirements.txt  tutorial.py
.github/workflows/: python-publish.yml
docs/: index.md  tutorial.md
docs/api/: base_functions.md
docs/api/oscar/: data_structure.md  oscar_constants.md  oscar_getter.md  oscar_loader.md
docs/api/pytorch/: RawOscarDataset.md
pyapnea/: __init__.py
pyapnea/oscar/: oscar_constants.py  oscar_getter.py
pyapnea/pytorch/: __init__.py  raw_oscar_dataset.py
pyapnea/utils/: __init__.py  annotations.py
src/pyapnea/: __init__.py  base_functions.py
src/pyapnea/oscar/: __init__.py  data_structure.py  oscar_constants.py  oscar_getter.py  oscar_loader.py
src/pyapnea/pytorch/: raw_oscar_dataset.py
src/pyapnea/utils/: annotations.py
test/: test_annotations.py
test/data/raw/ResMed_1234567890/Events/: 61f5f33c.001
test/test_oscar/: test_oscar_getter.py  test_oscar_loader.py
test/test_pytorch/: test_raw_oscar_dataset.py
