[build-system]
requires = ["setuptools>=67.0", "pandas>=2.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyapnea"
version = "0.0.2"
authors = [
  { name="Julien Laumonier", email="julien.laumonier@iid.ulaval.ca" },
]
description = "Python package related to Apnea data analysis"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/iid-ulaval/pyapnea"
"Bug Tracker" = "https://github.com/iid-ulaval/pyapnea/issues"
"Documentation" = "https://pyapnea.readthedocs.io/en/latest/"